Issue 29003: DataSpace: incorrect alignment of antigens

--- a/app/Connector/packages/connector-theme/sass/var/panel/_Selector.scss
+++ b/app/Connector/packages/connector-theme/sass/var/panel/_Selector.scss
@@ -425,3 +425,7 @@
 .checkbox2 .x-form-checkbox {
   background-image: url(images/form/checkbox2.gif);
 }
+
+.antigen-selection-panel .x-table-form-item {
+  margin-bottom: 0 !important;
+}
